examples/traffic_splitting/gateway_ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    nsm.nginx.com/internal-route: "true"
spec:
#  ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  rules:
  - host: gateway.apps.loren.test
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway-svc
          servicePort: 80
